--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-test
+pyyaml>=6.0
+boto3>=1.26.0
+azure-identity>=1.12.0
+azure-mgmt-resource>=22.0.0
+google-cloud-resource-manager>=1.7.0
+hcl2>=0.3.0
+jinja2>=3.1.0
+click>=8.1.0
+colorama>=0.4.6
+tabulate>=0.9.0
+pytest>=7.2.0
+pytest-cov>=4.0.0
+black>=22.0.0
+flake8>=5.0.0
