--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ boto3>=1.26.0
 azure-identity>=1.12.0
 azure-mgmt-resource>=22.0.0
 google-cloud-resource-manager>=1.7.0
-hcl2>=0.3.0
+python-hcl2>=4.3.0
 jinja2>=3.1.0
 click>=8.1.0
 colorama>=0.4.6
