--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
     - name: Test Docker image
       run: docker run --rm cloud-security-toolkit:latest --help
 
-  release:
+  build:
     runs-on: ubuntu-latest
     needs: [test, docker]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -83,7 +83,7 @@ jobs:
       with:
         python-version: 3.11
 
-    - name: Install dependencies
+    - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build twine
@@ -91,16 +91,27 @@ jobs:
     - name: Build package
       run: python -m build
 
+    - name: Check package
+      run: twine check dist/*
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: dist
+        path: dist/
+
+    # Only attempt to publish if we have the token
     - name: Publish to Test PyPI
+      if: env.TEST_PYPI_API_TOKEN != ''
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-      run: twine upload --repository testpypi dist/*
+      run: twine upload --repository testpypi dist/* --verbose
 
-    # Uncomment for production releases
+    # Uncomment and configure for production releases
     # - name: Publish to PyPI
-    #   if: startsWith(github.ref, 'refs/tags/')
+    #   if: startsWith(github.ref, 'refs/tags/') && env.PYPI_API_TOKEN != ''
     #   env:
     #     TWINE_USERNAME: __token__
     #     TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-    #   run: twine upload dist/*
+    #   run: twine upload dist/* --verbose
