--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,12 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Cache pip packages
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
@@ -49,7 +49,7 @@ jobs:
         pytest tests/ -v --cov=src --cov-report=xml
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
         flags: unittests
@@ -79,7 +79,7 @@ jobs:
         fetch-depth: 0
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: 3.11
 
@@ -95,14 +95,14 @@ jobs:
       run: twine check dist/*
 
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: dist
+        name: python-package-distributions
         path: dist/
 
     # Only attempt to publish if we have the token
     - name: Publish to Test PyPI
-      if: env.TEST_PYPI_API_TOKEN != ''
+      if: secrets.TEST_PYPI_API_TOKEN != ''
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
@@ -110,8 +110,33 @@ jobs:
 
     # Uncomment and configure for production releases
     # - name: Publish to PyPI
-    #   if: startsWith(github.ref, 'refs/tags/') && env.PYPI_API_TOKEN != ''
+    #   if: startsWith(github.ref, 'refs/tags/') && secrets.PYPI_API_TOKEN != ''
     #   env:
     #     TWINE_USERNAME: __token__
     #     TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
     #   run: twine upload dist/* --verbose
+
+  # Optional: Create GitHub Release on tags
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: python-package-distributions
+        path: dist/
+
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v2
+      with:
+        files: dist/*
+        generate_release_notes: true
+        draft: false
+        prerelease: false
