--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,10 +102,10 @@ jobs:
 
     # Only attempt to publish if we have the token
     - name: Publish to Test PyPI
-      if: secrets.TEST_PYPI_API_TOKEN != ''
+      if: env.TEST_PYPI_API_TOKEN != ''
       env:
         TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        TWINE_PASSWORD: ${{ env.TEST_PYPI_API_TOKEN }}
       run: twine upload --repository testpypi dist/* --verbose
 
     # Uncomment and configure for production releases
