--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,9 +3,9 @@ name: Docker Image CI
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch: # optional: manual trigger
+    tags:
+      - 'v*'  # triggers workflow on tags like v1.0.2
+  workflow_dispatch:
 
 jobs:
 
@@ -13,21 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repo
       - uses: actions/checkout@v4
 
-      # Set up Docker Buildx (needed for pushing)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
@@ -36,4 +32,44 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:${{ github.ref_name }}
+
+###name: Docker Image CI
+
+###on:
+ ### push:
+  ###  branches: [ "main" ]
+ ### pull_request:
+  ###  branches: [ "main" ]
+ ### workflow_dispatch: # optional: manual trigger
+
+####jobs:
+
+  ###build-and-push:
+    ###runs-on: ubuntu-latest
+
+    ###steps:
+      # Checkout the repo
+     #### - uses: actions/checkout@v4
+
+      # Set up Docker Buildx (needed for pushing)
+     #### - name: Set up Docker Buildx
+       ##### uses: docker/setup-buildx-action@v2
+
+      # Log in to Docker Hub
+    ####  - name: Log in to Docker Hub
+       #### uses: docker/login-action@v2
+       #### with:
+          #####username: ${{ secrets.DOCKERHUB_USERNAME }}
+          ####password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Build and push Docker image
+      ####- name: Build and push Docker image
+        ####uses: docker/build-push-action@v4
+        ####with:
+          ####context: .
+          ####file: ./Dockerfile
+          ###push: true
+          ###tags: |
+            ####${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:latest
+            ####${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:${{ github.sha }}
