--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,38 +1,54 @@
-name: Docker Image CI
+name: Docker Image CI & Publish
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main        # trigger for CI builds
     tags:
-      - 'v*'  # triggers workflow on tags like v1.0.2
-  workflow_dispatch:
+      - 'v*'        # trigger for versioned releases like v1.0.2
+  workflow_dispatch: # manual trigger if needed
 
 jobs:
-
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      # Checkout repo
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
+      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # Determine tags
+      - name: Set image tags
+        id: tags
+        run: |
+          IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            # On tag push: use both latest and version tag
+            echo "TAGS=${IMAGE}:${GITHUB_REF_NAME},${IMAGE}:latest" >> $GITHUB_ENV
+          else
+            # On main branch push: just latest
+            echo "TAGS=${IMAGE}:latest" >> $GITHUB_ENV
+          fi
+
+      # Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:${{ github.ref_name }}
+          tags: ${{ env.TAGS }}
 
 ###name: Docker Image CI
 
