--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,45 +3,39 @@ name: Docker Image CI & Publish
 on:
   push:
     branches:
-      - main        # trigger for CI builds
+      - main        # CI builds
     tags:
-      - 'v*'        # trigger for versioned releases like v1.0.2
-  workflow_dispatch: # manual trigger if needed
+      - 'v*'        # versioned releases like v1.0.2
+  workflow_dispatch: # optional manual trigger
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Determine tags
-      - name: Set image tags
-        id: tags
+      - name: Determine Docker tags
+        id: set-tags
         run: |
           IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit
           if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-            # On tag push: use both latest and version tag
+            # Use version tag and latest
             echo "TAGS=${IMAGE}:${GITHUB_REF_NAME},${IMAGE}:latest" >> $GITHUB_ENV
           else
-            # On main branch push: just latest
+            # Use main branch only
             echo "TAGS=${IMAGE}:latest" >> $GITHUB_ENV
-          fi
 
-      # Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
@@ -49,6 +43,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ env.TAGS }}
+
 
 ###name: Docker Image CI
 
