--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,59 +1,32 @@
-name: Docker CI & Publish
+name: Docker Publish
 
 on:
   push:
-    branches:
-      - main          # Trigger on main branch commits
     tags:
-      - 'v*'          # Trigger on version tags like v1.0.3
-  workflow_dispatch:    # Optional manual trigger
-    inputs:
-      tag:
-        description: 'Optional version tag (e.g., v1.0.3)'
-        required: false
+      - 'v*'
 
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # 2️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # 3️⃣ Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 4️⃣ Determine Docker tags
-      - name: Set Docker image tags
-        id: set-tags
-        run: |
-          IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit
-
-          # If workflow_dispatch with tag input
-          if [[ -n "${{ github.event.inputs.tag }}" ]]; then
-            echo "TAGS=${IMAGE}:${{ github.event.inputs.tag }},${IMAGE}:latest" >> $GITHUB_ENV
-          # If tag push
-          elif [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-            echo "TAGS=${IMAGE}:${GITHUB_REF_NAME},${IMAGE}:latest" >> $GITHUB_ENV
-          # If branch push
-          else
-            echo "TAGS=${IMAGE}:latest" >> $GITHUB_ENV
-          fi
-
-      # 5️⃣ Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ env.TAGS }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:${{ github.ref_name }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:latest
