--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,10 @@ name: Docker Publish
 on:
   push:
     tags:
-      - 'v*'
+      - 'v1.0.0'
+    branches:
+      - main
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   docker:
@@ -11,26 +14,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Extract tag name
-        id: tag
-        run: |
-          if [[ "${{ github.ref_type }}" == "tag" ]]; then
-            TAG_NAME=$(echo ${{ github.ref }} | sed 's|refs/tags/||')
-            echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-            echo "is_tag=true" >> $GITHUB_OUTPUT
-          else
-            echo "is_tag=false" >> $GITHUB_OUTPUT
-            echo "Not a tag push, skipping..."
-            exit 1
-          fi
-
-      - name: Debug information
-        run: |
-          echo "GITHUB_REF: ${{ github.ref }}"
-          echo "GITHUB_REF_NAME: ${{ github.ref_name }}"
-          echo "GITHUB_REF_TYPE: ${{ github.ref_type }}"
-          echo "Extracted tag: ${{ steps.tag.outputs.tag_name }}"
+        with:
+          fetch-depth: 0  # Fetch all history for all tags
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -41,18 +26,28 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:${{ steps.tag.outputs.tag_name }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64  # Multi-platform support
 
       - name: Display pushed tags
         run: |
-          echo "Successfully pushed:"
-          echo "- ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:${{ steps.tag.outputs.tag_name }}"
-          echo "- ${{ secrets.DOCKERHUB_USERNAME }}/cloud-security-toolkit:latest"
+          echo "Pushed tags:"
+          echo "${{ steps.meta.outputs.tags }}"
